kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-dashboard
spec:
  hostnames: ["longhorn.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: nework
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
